fix(query): add JVM add-opens/exports for Spark on Java 17+
Spark 3.3.4 fails on Java 17+ with NoSuchMethodException: java.nio.DirectByteBuffer
(long,int) because the JDK strongly encapsulates internal nio classes. Pass
--add-opens=java.base/java.nio=ALL-UNNAMED and sun.nio.ch exports to both driver
and executor (via env spark.*.extraJavaOptions and JDK_JAVA_OPTIONS).

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>